<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color2resistance"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/tvBColor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primera_banda_color"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/tiColor1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tiColor1"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_color"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBColor1"
        android:layout_marginTop="4dp"
        >

        <AutoCompleteTextView
            android:id="@+id/actvColor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color_dropdown"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvBColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segunda_banda_color"
        android:textSize="18dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/tiColor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiColor1" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tiColor2"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_color"
        app:layout_constraintTop_toBottomOf="@+id/tiColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBColor2"

        android:layout_marginTop="18dp"
        >

        <AutoCompleteTextView
            android:id="@+id/actvColor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color_dropdown"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvMultiplicador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicador"
        android:textSize="18dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/tiColor3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBColor2" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tiColor3"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_color"
        app:layout_constraintTop_toBottomOf="@+id/tiColor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBColor2"

        android:layout_marginTop="18dp"
        >

        <AutoCompleteTextView
            android:id="@+id/actvColor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color_dropdown"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_de_la_resistencia"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiColor3" />

    <TextView
        android:id="@+id/tvResistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        app:layout_constraintVertical_bias="0.1"
        />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResistance"
        app:layout_constraintVertical_bias="0.1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>